--- a/Simbolics.ipynb
+++ b/Simbolics.ipynb
@@ -14,6 +14,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0cab2b50",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "T^{ab} = \\frac{\\partial^2 \\chi}{\\zeta_a \\zeta_b}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "A^{abc} = \\frac{\\partial^2 \\chi}{\\zeta_a \\zeta_{bc}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aebd7682",
+   "metadata": {},
+   "source": [
+    "In our case the conformally invariant $\\chi$ is given by:\n",
+    "\n",
+    "$$\n",
+    "\\chi(\\zeta_a, \\zeta_{ab}) = \\chi_0 \\mu^{-d/2 + 1} + \\chi_1 \\nu \\mu^{-d/2 -1} \n",
+    "+ \\chi_2(\\tau_2 - \\frac{4(d/2+1)}{\\mu} \\omicron + \\frac{2(d/2+1)(d/2+2)}{\\mu^2}\\nu^2)\\mu^{-d/2 -1},\n",
+    "$$\n",
+    "\n",
+    "where,\n",
+    "\n",
+    "$$\n",
+    "\\mu := \\zeta^a \\zeta_a \\;\\;\\;\\;\\;\\;\\;\\;  \\nu := \\zeta_{ab}\\zeta^a \\zeta^b \\;\\;\\;\\;\\;\\;\\;\\; \\omicron := \\zeta^a \\zeta_{ab} \\zeta^{bc} \\zeta_c, \\;\\;\\;\\;\\;\\;\\;\\; \\tau_2  := \\zeta_{ab}\\zeta^{ab}\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ac6b5b92-5328-498d-ab22-0b262d16a04b",
@@ -59,16 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
    "id": "21a7c9d7-f1ed-48d5-ac63-c8f4338f7aa4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2×2 Matrix{Float64}:\n",
-       " -1.0  0.0\n",
-       "  0.0  1.0"
+       "4×4 Matrix{Float64}:\n",
+       " -1.0  0.0  0.0  0.0\n",
+       "  0.0  1.0  0.0  0.0\n",
+       "  0.0  0.0  1.0  0.0\n",
+       "  0.0  0.0  0.0  1.0"
       ]
      },
      "metadata": {},
@@ -76,8 +112,8 @@
     }
    ],
    "source": [
-    "#D = Int64(4) #dimensions\n",
-    "D = Int64(2) #dimensions\n",
+    "D = Int64(4) #dimensions\n",
+    "#D = Int64(2) #dimensions\n",
     "L = (D+(D*(D+1)÷2))\n",
     "ζ = Vector{Float64}(undef,L)\n",
     "ζ_v = Vector{Float64}(undef,D)\n",
@@ -231,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "id": "f8666e49-b8d0-43d6-9063-4115eea7b2ad",
    "metadata": {},
    "outputs": [
@@ -283,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "id": "17bd1646-5179-4051-847b-8ff1c376e414",
    "metadata": {},
    "outputs": [],
@@ -295,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "id": "1698cffb-fa77-4cb8-888a-06d130f496bb",
    "metadata": {},
    "outputs": [],
@@ -308,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "id": "463e7761-1b33-4617-a188-25ae9c58bed2",
    "metadata": {},
    "outputs": [
@@ -318,23 +354,24 @@
        "\\begin{equation}\n",
        "\\left[\n",
        "\\begin{array}{c}\n",
-       "0.024056261216234404 pv{_1} + 0.0573006777581139 pv{_2} + 0.44991507929335484 pv{_3} \\\\\n",
-       " - 0.04811252243246881 pv{_1} - 0.1707326316874414 pv{_2} - 2.967721964755377 pv{_3} \\\\\n",
-       " - 0.07216878364870322 pv{_1} - 0.31223022370237574 pv{_2} - 6.425922626349708 pv{_3} \\\\\n",
+       "0.002551020408163265 pv{_1} + 0.0028406132861307776 pv{_2} + 0.010664103339169867 pv{_3} \\\\\n",
+       " - 0.00510204081632653 pv{_1} - 0.008778894210745519 pv{_2} - 0.14496530729117962 pv{_3} \\\\\n",
+       " - 0.007653061224489796 pv{_1} - 0.015719361724281546 pv{_2} - 0.31656681766313355 pv{_3} \\\\\n",
+       " - 0.01020408163265306 pv{_1} - 0.023297584339858384 pv{_2} - 0.5131969619376278 pv{_3} \\\\\n",
        "\\end{array}\n",
        "\\right]\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "3-element Vector{Num}:\n",
-       "  0.024056261216234404pv[1] + 0.0573006777581139pv[2] + 0.44991507929335484pv[3]\n",
-       " -0.04811252243246881pv[1] - 0.1707326316874414pv[2] - 2.967721964755377pv[3]\n",
-       " -0.07216878364870322pv[1] - 0.31223022370237574pv[2] - 6.425922626349708pv[3]"
+       "4-element Vector{Num}:\n",
+       "  0.002551020408163265pv[1] + 0.0028406132861307776pv[2] + 0.010664103339169867pv[3]\n",
+       " -0.00510204081632653pv[1] - 0.008778894210745519pv[2] - 0.14496530729117962pv[3]\n",
+       " -0.007653061224489796pv[1] - 0.015719361724281546pv[2] - 0.31656681766313355pv[3]\n",
+       " -0.01020408163265306pv[1] - 0.023297584339858384pv[2] - 0.5131969619376278pv[3]"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -345,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "id": "e20d6c24-69a8-4e82-872f-010bce0ca23a",
    "metadata": {},
    "outputs": [],
@@ -357,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "id": "c7b6d611-ccdd-4917-a53a-a011b60151f5",
    "metadata": {},
    "outputs": [],
@@ -367,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "id": "d4641504-d6c2-454d-ac80-529d1c814bca",
    "metadata": {},
    "outputs": [],
@@ -378,19 +415,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "id": "af68a64c-d248-400c-950a-45d5aa85a4f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.229330325120059"
+       "0.14514041768310848"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -399,33 +435,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "id": "0c5e8ae6-bde7-462e-8548-98c841033a8e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "DimensionMismatch(\"A has dimensions (3,3) but B has dimensions (4,4)\")",
-     "output_type": "error",
-     "traceback": [
-      "DimensionMismatch(\"A has dimensions (3,3) but B has dimensions (4,4)\")",
-      "",
-      "Stacktrace:",
-      " [1] gemm_wrapper!(C::Matrix{Float64}, tA::Char, tB::Char, A::Matrix{Float64}, B::Matrix{Float64}, _add::LinearAlgebra.MulAddMul{true, true, Bool, Bool})",
-      "   @ LinearAlgebra /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/matmul.jl:643",
-      " [2] mul!",
-      "   @ /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/matmul.jl:169 [inlined]",
-      " [3] mul!",
-      "   @ /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/matmul.jl:275 [inlined]",
-      " [4] *(A::Matrix{Float64}, B::Matrix{Float64})",
-      "   @ LinearAlgebra /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/matmul.jl:160",
-      " [5] top-level scope",
-      "   @ In[17]:1",
-      " [6] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [7] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
-     ]
+     "data": {
+      "text/plain": [
+       "30.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
