--- a/sym_v1.ipynb
+++ b/sym_v1.ipynb
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "χ0AB (generic function with 1 method)"
+       "χ0AB (generic function with 2 methods)"
       ]
      },
      "metadata": {},
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -50,8 +50,8 @@
     }
    ],
    "source": [
-    "#D = Int64(4) #dimensions\n",
-    "D = Int64(2) #dimensions\n",
+    "D = Int64(4) #dimensions\n",
+    "#D = Int64(2) #dimensions\n",
     "L = (D+(D*(D+1)÷2))\n",
     "#ζ = Vector{Float64}(undef,L)\n",
     "#ζ_v = Vector{Float64}(undef,D)\n",
@@ -63,13 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.01481738143631"
+       "11.530697656276184"
       ]
      },
      "metadata": {},
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#17 (generic function with 1 method)"
+       "#83 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -113,18 +113,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5-element Vector{Float64}:\n",
-       " -157.81467808601488\n",
-       "  102.37921352963512\n",
-       "   73.82301131178804\n",
-       "  -67.61181001496291\n",
-       "   18.58768434246372"
+       "14-element Vector{Float64}:\n",
+       " -1013.413944186829\n",
+       " -1459.5371755177612\n",
+       " -1726.260981488396\n",
+       " -1344.9209665884164\n",
+       "     0.8416380851338819\n",
+       "    48.23339593671578\n",
+       "    56.444887889252854\n",
+       "    61.32776054950823\n",
+       "    95.32247225550483\n",
+       "   242.975116459748\n",
+       "   184.4064365858252\n",
+       "   167.9871930806561\n",
+       "   258.3515771719864\n",
+       "    83.39737733989757"
       ]
      },
      "metadata": {},
@@ -137,60 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "J∇ζ = Symbolics.jacobian(∇ζ_f(vs,ps),vst);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "#19 (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "J∇ζ_exp = Symbolics.build_function(J∇ζ,vs,ps);\n",
-    "J∇ζ_f = eval(J∇ζ_exp[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5×5 Matrix{Float64}:\n",
-       "  1743.19   -1329.02   -628.069    706.447   -208.786\n",
-       " -1329.02    1459.72    431.921   -787.793    258.51\n",
-       "  -628.069    431.921   144.84    -141.016     32.7796\n",
-       "   706.447   -787.793  -141.016    253.877    -81.2089\n",
-       "  -208.786    258.51     32.7796   -81.2089    43.4773"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "J∇ζ_f(ζ,p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#47 (generic function with 1 method)"
+       "#147 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -220,15 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2×5 Matrix{Float64}:\n",
-       "  1.29491e6  -1.29375e6   74722.5  -1.36087e5   61301.2\n",
-       " -1.29375e6   1.29318e6  -74003.3   1.35931e5  -62019.8"
+       "4×14 Matrix{Float64}:\n",
+       " 210.908   107.215   -96.15      125.203   …    2.55455   0.925487   -6.55264\n",
+       " 107.215   286.538  -406.165     291.03        38.5431   22.7022    -48.2403\n",
+       " -96.15   -406.165     3.65376  -309.09       -23.8564   28.5717     11.9117\n",
+       " 125.203   291.03   -309.09       68.0756      31.0289   11.5871     13.7742"
       ]
      },
      "metadata": {},
@@ -241,23 +199,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"symbolics_ext.jl\")\n",
+    "#include(\"symbolics_ext.jl\")\n",
     "Φ0AB = χ0AB(Φ_new(vs,ps),vst);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#79 (generic function with 1 method)"
+       "#149 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -271,18 +229,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5×5 Matrix{Float64}:\n",
-       "  5241.48  -5417.3    2423.28   -5187.37   2838.99\n",
-       " -5417.3    4973.62  -2334.42    5166.32  -2726.48\n",
-       "  2423.28  -2334.42    635.092  -1395.57    751.37\n",
-       " -5187.37   5166.32  -1395.57    3206.37  -1826.03\n",
-       "  2838.99  -2726.48    751.37   -1826.03   1068.54"
+       "14×14 Matrix{Float64}:\n",
+       "  -734.776    -1325.0       779.168    …  -65.051     -55.6182     85.9578\n",
+       " -1325.0       -384.94      499.832        -7.35521    -6.84646    32.4808\n",
+       "   779.168      499.832     210.558         1.32293   -25.8433     -0.74784\n",
+       " -1007.15      -760.864     466.342       -11.5001     -1.87132    22.6351\n",
+       "   188.749        6.06373    -4.05027      -1.14475     1.14375     3.10813\n",
+       "    15.3165     343.295     -63.1665   …    7.98105    -8.0314    -21.8826\n",
+       "    -7.72489    -63.1665   -122.491         2.9453     14.231      -2.5776\n",
+       "    44.6295     367.812     -55.6182        7.1155     -5.1552     -4.33241\n",
+       "   167.842      -19.0619     -4.62536      -1.26945     1.70734     5.07907\n",
+       "   -63.1665      -9.62636   -17.8994       -1.22793    -5.86902     1.436\n",
+       "   367.812       16.6731     -6.84646  …   -2.93451     2.872       4.50938\n",
+       "   -65.051       -7.35521     1.32293       1.05654    -1.09476    -0.931845\n",
+       "   -55.6182      -6.84646   -25.8433       -1.09476    -3.72738     0.531169\n",
+       "    85.9578      32.4808     -0.74784      -0.931845    0.531169   -1.03909"
       ]
      },
      "metadata": {},
@@ -291,6 +258,318 @@
    ],
    "source": [
     "Φ0AB_f(ζ,p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 0.1, 0.0, 0.0, 1.0, 0.25, 0.0, 0.0, 0.5, 0.0, 0.0, 0.25, 0.0, 0.25]\n",
+      "[1.0, 0.1, 0.0, 0.0, 1.0, 0.25, 0.0, 0.0, 0.5, 0.0, 0.0, 0.25, 0.0, 0.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ζ_t = zeros(14)\n",
+    "ζ_t[1] = 1.0  \n",
+    "ζ_t[2] = 0.10\n",
+    "ζ_t[4 + l_ind(1,1,4)] = 1.0 #00\n",
+    "ζ_t[4 + l_ind(1,2,4)] = 0.25 #01\n",
+    "ζ_t[4 + l_ind(2,2,4)] = 0.5 #11\n",
+    "ζ_t[4 + l_ind(3,3,4)] = 0.25\n",
+    "ζ_t[4 + l_ind(4,4,4)] = 0.25\n",
+    "\n",
+    "#tr(g*vector_unpack(ζ_t)[2])\n",
+    "#vector_unpack(ζ_t)[2]\n",
+    "println(ζ_t)\n",
+    "println(make_vector_TF!(ζ_t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×14 Matrix{Float64}:\n",
+       " -569.932     16.0507     0.0    …   0.0      40.1761    0.0  40.1761\n",
+       "   16.0507  -204.817      0.0       -0.0      -2.73716  -0.0  -2.73716\n",
+       "    0.0        0.0     -182.557     -0.0       0.0      -0.0   0.0\n",
+       "    0.0        0.0       -0.0       -2.73716   0.0      -0.0   0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "ΦaA_f(ζ_t,p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Matrix{Float64}:\n",
+       " 18.6432    6.0818   15.0797   17.9213\n",
+       "  6.0818  -29.826     1.55682   7.58679\n",
+       " 15.0797    1.55682  12.0281   45.7031\n",
+       " 17.9213    7.58679  45.7031   36.4411"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#T = ΦaA_f(ζ_t,[-1.0,1.0,1.0])[1:D,1:D]\n",
+    "T = ΦaA_f(make_vector_TF!(rand(L)),[-1.0,1.0,1.0])[1:D,1:D]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tr(g*T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Matrix{Float64}:\n",
+       " 124.185   -14.5102  -0.0     -0.0\n",
+       " -14.5102   43.8331   0.0      0.0\n",
+       "  -0.0       0.0     40.1761   0.0\n",
+       "  -0.0       0.0      0.0     40.1761"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A0 = vector2symmat(ΦaA_f(ζ_t,[-1.0,1.0,1.0])[1,D+1:end])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14×14 Matrix{Float64}:\n",
+       " 4523.3    -285.362      0.0     …  -281.665     0.0     -281.665\n",
+       " -285.362  1634.92       0.0          24.9288    0.0       24.9288\n",
+       "    0.0       0.0     1444.19          0.0       0.0        0.0\n",
+       "    0.0       0.0        0.0           0.0       0.0        0.0\n",
+       " -876.17    131.812      0.0          31.7353    0.0       31.7353\n",
+       "  263.624  -625.681      0.0     …    -8.84552   0.0       -8.84552\n",
+       "    0.0       0.0     -563.329         0.0      -0.0        0.0\n",
+       "    0.0       0.0       -0.0           0.0      -0.0        0.0\n",
+       " -312.841    81.9545     0.0           6.75086   0.0        6.75086\n",
+       "    0.0       0.0       49.8576        0.0       0.0        0.0\n",
+       "    0.0       0.0        0.0     …     0.0       0.0        0.0\n",
+       " -281.665    24.9288     0.0          18.7384    0.0        6.24612\n",
+       "    0.0       0.0        0.0           0.0      24.9845     0.0\n",
+       " -281.665    24.9288     0.0           6.24612   0.0       18.7384"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Φ0AB_f(ζ_t,p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.000675 seconds (399 allocations: 11.016 KiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "263.62421706993825"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@time Φ0AB_f(ζ_t,p)[6,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4×4 Array{Float64, 3}:\n",
+       "[:, :, 1] =\n",
+       "  6.39553e7  -4.92528e7  -2.86083e7  -3.12133e7\n",
+       " -4.92528e7   3.7523e7    2.23816e7   2.4408e7\n",
+       " -2.86083e7   2.23816e7   1.19599e7   1.41821e7\n",
+       " -3.12133e7   2.4408e7    1.41821e7   1.44725e7\n",
+       "\n",
+       "[:, :, 2] =\n",
+       " -4.92528e7   3.7523e7    2.23816e7   2.4408e7\n",
+       "  3.7523e7   -2.82437e7  -1.73368e7  -1.88945e7\n",
+       "  2.23816e7  -1.73368e7  -9.50981e6  -1.12696e7\n",
+       "  2.4408e7   -1.88945e7  -1.12696e7  -1.14993e7\n",
+       "\n",
+       "[:, :, 3] =\n",
+       " -2.86083e7   2.23816e7   1.19599e7   1.41821e7\n",
+       "  2.23816e7  -1.73368e7  -9.50981e6  -1.12696e7\n",
+       "  1.19599e7  -9.50981e6  -4.5822e6   -6.02612e6\n",
+       "  1.41821e7  -1.12696e7  -6.02612e6  -6.68926e6\n",
+       "\n",
+       "[:, :, 4] =\n",
+       " -3.12133e7   2.4408e7    1.41821e7   1.44725e7\n",
+       "  2.4408e7   -1.88945e7  -1.12696e7  -1.14993e7\n",
+       "  1.41821e7  -1.12696e7  -6.02612e6  -6.68926e6\n",
+       "  1.44725e7  -1.14993e7  -6.68926e6  -6.29266e6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#AA = get_A(ΦaA_f(ζ_t,[-1.0,1.0,1.0]))\n",
+    "AA = get_A(ΦaA_f(make_vector_TF!(rand(L)),[-1.0,1.0,1.0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.774199962615967e-8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "full_symmetry_check(AA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Float64}:\n",
+       "  1.862645149230957e-9\n",
+       "  5.587935447692871e-9\n",
+       " -7.450580596923828e-9\n",
+       "  5.587935447692871e-9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "include(\"symbolics_ext.jl\")\n",
+    "tr_A_12(AA,g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.881784197001252e-16"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tr(g*AA[:,:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.9862036909702994"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "AA[1,1,2]"
    ]
   },
   {
