completing the description
checking 2D

Note: since the trace is null there is an unnecessary  equation.
So we need to take out one of the equations.

--- a/sym_v1.ipynb
+++ b/sym_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "χ0AB (generic function with 2 methods)"
+       "χ0AB"
       ]
      },
      "metadata": {},
@@ -33,9 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D = 2, L = 5\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -50,9 +57,11 @@
     }
    ],
    "source": [
-    "D = Int64(4) #dimensions\n",
-    "#D = Int64(2) #dimensions\n",
+    "#D = Int64(4) #dimensions\n",
+    "#D = Int64(3)\n",
+    "D = Int64(2) #dimensions\n",
     "L = (D+(D*(D+1)÷2))\n",
+    "println(\"D = $D, L = $L\")\n",
     "#ζ = Vector{Float64}(undef,L)\n",
     "#ζ_v = Vector{Float64}(undef,D)\n",
     "#ζ_t = Array{Float64}(undef,D,D)\n",
@@ -63,13 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11.530697656276184"
+       "41.5120582824191"
       ]
      },
      "metadata": {},
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#83 (generic function with 1 method)"
+       "#177 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -113,27 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14-element Vector{Float64}:\n",
-       " -1013.413944186829\n",
-       " -1459.5371755177612\n",
-       " -1726.260981488396\n",
-       " -1344.9209665884164\n",
-       "     0.8416380851338819\n",
-       "    48.23339593671578\n",
-       "    56.444887889252854\n",
-       "    61.32776054950823\n",
-       "    95.32247225550483\n",
-       "   242.975116459748\n",
-       "   184.4064365858252\n",
-       "   167.9871930806561\n",
-       "   258.3515771719864\n",
-       "    83.39737733989757"
+       "5-element Vector{Float64}:\n",
+       " -281.69315273192694\n",
+       "  -86.21383200200704\n",
+       "   25.365037300869652\n",
+       "   86.37387106202348\n",
+       "  -16.498208767777207"
       ]
      },
      "metadata": {},
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#147 (generic function with 1 method)"
+       "#181 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -176,17 +176,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4×14 Matrix{Float64}:\n",
-       " 210.908   107.215   -96.15      125.203   …    2.55455   0.925487   -6.55264\n",
-       " 107.215   286.538  -406.165     291.03        38.5431   22.7022    -48.2403\n",
-       " -96.15   -406.165     3.65376  -309.09       -23.8564   28.5717     11.9117\n",
-       " 125.203   291.03   -309.09       68.0756      31.0289   11.5871     13.7742"
+       "2×5 Matrix{Float64}:\n",
+       " 2447.84    405.139    22.8391  -316.401     22.8391\n",
+       "  405.139  2166.51   -321.921     59.6381  -321.921"
       ]
      },
      "metadata": {},
@@ -199,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,13 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#149 (generic function with 1 method)"
+       "#183 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -229,27 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14×14 Matrix{Float64}:\n",
-       "  -734.776    -1325.0       779.168    …  -65.051     -55.6182     85.9578\n",
-       " -1325.0       -384.94      499.832        -7.35521    -6.84646    32.4808\n",
-       "   779.168      499.832     210.558         1.32293   -25.8433     -0.74784\n",
-       " -1007.15      -760.864     466.342       -11.5001     -1.87132    22.6351\n",
-       "   188.749        6.06373    -4.05027      -1.14475     1.14375     3.10813\n",
-       "    15.3165     343.295     -63.1665   …    7.98105    -8.0314    -21.8826\n",
-       "    -7.72489    -63.1665   -122.491         2.9453     14.231      -2.5776\n",
-       "    44.6295     367.812     -55.6182        7.1155     -5.1552     -4.33241\n",
-       "   167.842      -19.0619     -4.62536      -1.26945     1.70734     5.07907\n",
-       "   -63.1665      -9.62636   -17.8994       -1.22793    -5.86902     1.436\n",
-       "   367.812       16.6731     -6.84646  …   -2.93451     2.872       4.50938\n",
-       "   -65.051       -7.35521     1.32293       1.05654    -1.09476    -0.931845\n",
-       "   -55.6182      -6.84646   -25.8433       -1.09476    -3.72738     0.531169\n",
-       "    85.9578      32.4808     -0.74784      -0.931845    0.531169   -1.03909"
+       "5×5 Matrix{Float64}:\n",
+       " -25914.0      -650.807  -677.701   2961.07   -677.701\n",
+       "   -650.807  -23215.5    3021.04   -1012.32   3021.04\n",
+       "   -677.701    3021.04   -286.525    182.966  -286.525\n",
+       "   2961.07    -1012.32    182.966   -286.525   182.966\n",
+       "   -677.701    3021.04   -286.525    182.966  -286.525"
       ]
      },
      "metadata": {},
@@ -262,47 +251,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.0, 0.1, 0.0, 0.0, 1.0, 0.25, 0.0, 0.0, 0.5, 0.0, 0.0, 0.25, 0.0, 0.25]\n",
-      "[1.0, 0.1, 0.0, 0.0, 1.0, 0.25, 0.0, 0.0, 0.5, 0.0, 0.0, 0.25, 0.0, 0.25]\n"
+      "[1.0, 0.1, 1.0, 0.25, 0.5]\n",
+      "[1.0, 0.1, 0.75, 0.25, 0.75]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "ζ_t = zeros(14)\n",
+    "ζ_t = zeros(L)\n",
     "ζ_t[1] = 1.0  \n",
     "ζ_t[2] = 0.10\n",
-    "ζ_t[4 + l_ind(1,1,4)] = 1.0 #00\n",
-    "ζ_t[4 + l_ind(1,2,4)] = 0.25 #01\n",
-    "ζ_t[4 + l_ind(2,2,4)] = 0.5 #11\n",
-    "ζ_t[4 + l_ind(3,3,4)] = 0.25\n",
-    "ζ_t[4 + l_ind(4,4,4)] = 0.25\n",
+    "ζ_t[D + l_ind(1,1,D)] = 1.0 #00\n",
+    "ζ_t[D + l_ind(1,2,D)] = 0.25 #01\n",
+    "ζ_t[D + l_ind(2,2,D)] = 0.5 #11\n",
+    "#ζ_t[D + l_ind(3,3,D)] = 0.25\n",
+    "#ζ_t[D + l_ind(4,4,D)] = 0.25\n",
     "\n",
     "#tr(g*vector_unpack(ζ_t)[2])\n",
     "#vector_unpack(ζ_t)[2]\n",
     "println(ζ_t)\n",
-    "println(make_vector_TF!(ζ_t))"
+    "println(make_vector_TF!(ζ_t))\n",
+    "tr(g*vector_unpack(ζ_t)[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4×14 Matrix{Float64}:\n",
-       " -569.932     16.0507     0.0    …   0.0      40.1761    0.0  40.1761\n",
-       "   16.0507  -204.817      0.0       -0.0      -2.73716  -0.0  -2.73716\n",
-       "    0.0        0.0     -182.557     -0.0       0.0      -0.0   0.0\n",
-       "    0.0        0.0       -0.0       -2.73716   0.0      -0.0   0.0"
+       "2×5 Matrix{Float64}:\n",
+       " 64.3678    5.81421  -18.6736     3.02021  -18.6736\n",
+       "  5.81421  64.3678     3.02021  -18.6736     3.02021"
       ]
      },
      "metadata": {},
@@ -316,17 +313,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4×4 Matrix{Float64}:\n",
-       " 18.6432    6.0818   15.0797   17.9213\n",
-       "  6.0818  -29.826     1.55682   7.58679\n",
-       " 15.0797    1.55682  12.0281   45.7031\n",
-       " 17.9213    7.58679  45.7031   36.4411"
+       "2×2 Matrix{Float64}:\n",
+       " 68.4899    4.99797\n",
+       "  4.99797  68.4899"
       ]
      },
      "metadata": {},
@@ -334,19 +329,19 @@
     }
    ],
    "source": [
-    "#T = ΦaA_f(ζ_t,[-1.0,1.0,1.0])[1:D,1:D]\n",
-    "T = ΦaA_f(make_vector_TF!(rand(L)),[-1.0,1.0,1.0])[1:D,1:D]"
+    "T = ΦaA_f(ζ_t,[-1.0,1.0,1.0])[1:D,1:D]\n",
+    "#T = ΦaA_f(make_vector_TF!(rand(L)),[-1.0,1.0,1.0])[1:D,1:D]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "8.526512829121202e-14"
       ]
      },
      "metadata": {},
@@ -359,17 +354,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4×4 Matrix{Float64}:\n",
-       " 124.185   -14.5102  -0.0     -0.0\n",
-       " -14.5102   43.8331   0.0      0.0\n",
-       "  -0.0       0.0     40.1761   0.0\n",
-       "  -0.0       0.0      0.0     40.1761"
+       "2×2 Matrix{Float64}:\n",
+       " -18.6736     3.02021\n",
+       "   3.02021  -18.6736"
       ]
      },
      "metadata": {},
@@ -382,27 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14×14 Matrix{Float64}:\n",
-       " 4523.3    -285.362      0.0     …  -281.665     0.0     -281.665\n",
-       " -285.362  1634.92       0.0          24.9288    0.0       24.9288\n",
-       "    0.0       0.0     1444.19          0.0       0.0        0.0\n",
-       "    0.0       0.0        0.0           0.0       0.0        0.0\n",
-       " -876.17    131.812      0.0          31.7353    0.0       31.7353\n",
-       "  263.624  -625.681      0.0     …    -8.84552   0.0       -8.84552\n",
-       "    0.0       0.0     -563.329         0.0      -0.0        0.0\n",
-       "    0.0       0.0       -0.0           0.0      -0.0        0.0\n",
-       " -312.841    81.9545     0.0           6.75086   0.0        6.75086\n",
-       "    0.0       0.0       49.8576        0.0       0.0        0.0\n",
-       "    0.0       0.0        0.0     …     0.0       0.0        0.0\n",
-       " -281.665    24.9288     0.0          18.7384    0.0        6.24612\n",
-       "    0.0       0.0        0.0           0.0      24.9845     0.0\n",
-       " -281.665    24.9288     0.0           6.24612   0.0       18.7384"
+       "5×5 Matrix{Float64}:\n",
+       " -386.271       4.89986   93.6295   -23.8436    93.6295\n",
+       "    4.89986  -386.271    -23.8436    93.6295   -23.8436\n",
+       "   93.6295    -23.8436   -13.8866     6.43552  -13.8866\n",
+       "  -23.8436     93.6295     6.43552  -13.8866     6.43552\n",
+       "   93.6295    -23.8436   -13.8866     6.43552  -13.8866"
       ]
      },
      "metadata": {},
@@ -415,20 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000675 seconds (399 allocations: 11.016 KiB)\n"
+      "  0.000017 seconds (27 allocations: 672 bytes)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "263.62421706993825"
+       "-386.27055961394495"
       ]
      },
      "metadata": {},
@@ -436,50 +420,25 @@
     }
    ],
    "source": [
-    "@time Φ0AB_f(ζ_t,p)[6,1]"
+    "@time Φ0AB_f(ζ_t,p)[1,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4×4×4 Array{Float64, 3}:\n",
+       "2×2×2 Array{Float64, 3}:\n",
        "[:, :, 1] =\n",
-       "  6.39553e7  -4.92528e7  -2.86083e7  -3.12133e7\n",
-       " -4.92528e7   3.7523e7    2.23816e7   2.4408e7\n",
-       " -2.86083e7   2.23816e7   1.19599e7   1.41821e7\n",
-       " -3.12133e7   2.4408e7    1.41821e7   1.44725e7\n",
+       "  345.441  -350.34\n",
+       " -350.34    345.441\n",
        "\n",
        "[:, :, 2] =\n",
-       " -4.92528e7   3.7523e7    2.23816e7   2.4408e7\n",
-       "  3.7523e7   -2.82437e7  -1.73368e7  -1.88945e7\n",
-       "  2.23816e7  -1.73368e7  -9.50981e6  -1.12696e7\n",
-       "  2.4408e7   -1.88945e7  -1.12696e7  -1.14993e7\n",
-       "\n",
-       "[:, :, 3] =\n",
-       " -2.86083e7   2.23816e7   1.19599e7   1.41821e7\n",
-       "  2.23816e7  -1.73368e7  -9.50981e6  -1.12696e7\n",
-       "  1.19599e7  -9.50981e6  -4.5822e6   -6.02612e6\n",
-       "  1.41821e7  -1.12696e7  -6.02612e6  -6.68926e6\n",
-       "\n",
-       "[:, :, 4] =\n",
-       " -3.12133e7   2.4408e7    1.41821e7   1.44725e7\n",
-       "  2.4408e7   -1.88945e7  -1.12696e7  -1.14993e7\n",
-       "  1.41821e7  -1.12696e7  -6.02612e6  -6.68926e6\n",
-       "  1.44725e7  -1.14993e7  -6.68926e6  -6.29266e6"
+       " -350.34    345.441\n",
+       "  345.441  -350.34"
       ]
      },
      "metadata": {},
@@ -493,13 +452,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.774199962615967e-8"
+       "1.1368683772161603e-13"
       ]
      },
      "metadata": {},
@@ -512,17 +471,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4-element Vector{Float64}:\n",
-       "  1.862645149230957e-9\n",
-       "  5.587935447692871e-9\n",
-       " -7.450580596923828e-9\n",
-       "  5.587935447692871e-9"
+       "2-element Vector{Float64}:\n",
+       " 0.0\n",
+       " 0.0"
       ]
      },
      "metadata": {},
@@ -536,13 +493,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.881784197001252e-16"
+       "0.0"
       ]
      },
      "metadata": {},
@@ -555,13 +512,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2.9862036909702994"
+       "-350.34004807719526"
       ]
      },
      "metadata": {},
