--- a/symb_2d.ipynb
+++ b/symb_2d.ipynb
@@ -10,20 +10,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "b0d852a1-2f1f-4216-b528-0c674e9c29b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.7/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.7/Manifest.toml`\n"
+     ]
+    }
+   ],
    "source": [
     "using Symbolics\n",
     "using LinearAlgebra\n",
     "using Latexify\n",
-    "using Plots"
+    "using Plots\n",
+    "import Pkg; Pkg.add(\"BenchmarkTools\")\n",
+    "using BenchmarkTools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "id": "f413f740-ee80-48ca-b609-d8537bb2e38e",
    "metadata": {},
    "outputs": [
@@ -43,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "6ba5f855",
    "metadata": {},
    "outputs": [
@@ -78,14 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "698114b9",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  2.533 μs (40 allocations: 1.95 KiB)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "980.5836498013676"
+       "15.681495676050915"
       ]
      },
      "metadata": {},
@@ -93,12 +112,20 @@
     }
    ],
    "source": [
-    "Φ_new(ζ,p)"
+    "@btime Φ_new(ζ,p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fabf99a",
+   "metadata": {},
+   "source": [
+    "btime: 2.480 μs (40 allocations: 1.95 KiB)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "id": "302423b0",
    "metadata": {},
    "outputs": [],
@@ -106,19 +133,19 @@
     "@variables vs[1:L] ps[1:3]\n",
     "vst = [vs[i] for i ∈ 1:L]\n",
     "vs_a = [vs[i] for i ∈ 1:D]\n",
-    "ΦaA = χaA(Φ_new(vs,ps),vs_a,vst);"
+    "ΦaA = Symbolics.simplify(χaA(Φ_new(vs,ps),vs_a,vst));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "id": "05c0fd76",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#11 (generic function with 1 method)"
+       "#53 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -128,6 +155,45 @@
    "source": [
     "ΦaA_exp = Symbolics.build_function(ΦaA,vs,ps);\n",
     "ΦaA_f = eval(ΦaA_exp[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "5b308edb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  766.875 ns (13 allocations: 480 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2×5 Matrix{Float64}:\n",
+       "  98772.9  -98260.8  -10021.8   10021.7   -10021.8\n",
+       " -98260.8   97772.2    9954.97  -9972.49    9954.97"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime ΦaA_f($rand(L),[1.0;1.0;1.0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bca07640",
+   "metadata": {},
+   "source": [
+    "btime: 769.500 ns (13 allocations: 480 bytes)\n",
+    "with simplify 762.159 ns (13 allocations: 480 bytes)\n",
+    "simpify dentro 766.875 ns (13 allocations: 480 bytes)"
    ]
   },
   {
@@ -163,52 +229,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ed4a30e9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5×5 Matrix{Float64}:\n",
-       " -3.99412e8   3.9854e8    5.99248e7  -5.99206e7   5.99248e7\n",
-       "  3.9854e8   -3.97736e8  -5.98415e7   5.98383e7  -5.98415e7\n",
-       "  5.99248e7  -5.98415e7  -5.33563e6   5.33562e6  -5.33563e6\n",
-       " -5.99206e7   5.98383e7   5.33562e6  -5.33563e6   5.33562e6\n",
-       "  5.99248e7  -5.98415e7  -5.33563e6   5.33562e6  -5.33563e6"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Φ0AB_f(ζ,p)"
+    "@btime Φ0AB_f(ζ,p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "id": "52d03fd9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5×5×2 Array{Float64, 3}:\n",
-       "[:, :, 1] =\n",
-       " -2662.29  -2661.71  21961.6        21961.4        21961.6\n",
-       " -2661.71  -2662.29  21961.4        21961.6        21961.4\n",
-       " 21961.6   21961.4       9.66306e5      9.66306e5      9.66306e5\n",
-       " 21961.4   21961.6       9.66306e5      9.66306e5      9.66306e5\n",
-       " 21961.6   21961.4       9.66306e5      9.66306e5      9.66306e5\n",
-       "\n",
-       "[:, :, 2] =\n",
-       " -2661.71  -2662.29  21961.4        21961.6        21961.4\n",
-       " -2662.29  -2661.71  21961.6        21961.4        21961.6\n",
-       " 21961.4   21961.6       9.66306e5      9.66306e5      9.66306e5\n",
-       " 21961.6   21961.4       9.66306e5      9.66306e5      9.66306e5\n",
-       " 21961.4   21961.6       9.66306e5      9.66306e5      9.66306e5"
+       "#30 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -216,10 +254,59 @@
     }
    ],
    "source": [
-    "ΦaAB = χaAB(Φ_new(vs,ps),vst);\n",
+    "ΦaAB = Symbolics.simplify(χaAB(Φ_new(vs,ps),vst));\n",
     "ΦaAB_exp = Symbolics.build_function(ΦaAB,vs,ps);\n",
-    "ΦaAB_f = eval(ΦaAB_exp[1])\n",
-    "ΦaAB_f(ζ,p)"
+    "ΦaAB_f = eval(ΦaAB_exp[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "044769a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  278.039 μs (252 allocations: 29.45 KiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5×5×2 Array{Float64, 3}:\n",
+       "[:, :, 1] =\n",
+       " -204.393   -775.608   -29.5024  156.095   -29.5024\n",
+       " -775.608   -101.513   159.812   -34.9509  159.812\n",
+       "  -29.5024   159.812    12.413   -22.696    12.413\n",
+       "  156.095    -34.9509  -22.696    12.413   -22.696\n",
+       "  -29.5024   159.812    12.413   -22.696    12.413\n",
+       "\n",
+       "[:, :, 2] =\n",
+       " -775.608   -101.513   159.812   -34.9509  159.812\n",
+       " -101.513   -802.525   -60.3769  163.529   -60.3769\n",
+       "  159.812    -60.3769  -22.696    12.413   -22.696\n",
+       "  -34.9509   163.529    12.413   -22.696    12.413\n",
+       "  159.812    -60.3769  -22.696    12.413   -22.696"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "@btime ΦaAB_f($ζ,p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4de16e8",
+   "metadata": {},
+   "source": [
+    "btime: 276.800 μs (252 allocations: 29.45 KiB)\n",
+    "with simplify 278.039 μs (252 allocations: 29.45 KiB)"
    ]
   },
   {
