--- a/Simbolics.ipynb
+++ b/Simbolics.ipynb
@@ -1242,15 +1242,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.0",
+   "display_name": "Julia (4 threads) 1.7.0",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-(4-threads)-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.0"
+   "version": "1.7.2"
   }
  },
  "nbformat": 4,
