--- a/symb_4d.ipynb
+++ b/symb_4d.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,8 +31,9 @@
        "χaAB (generic function with 1 method)"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,8 +61,9 @@
        " 1.0"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -75,17 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.912488980554461"
+       "27.71010940819427"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -94,19 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "#13 (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@variables vs[1:L] ps[1:3]\n",
     "vst = [vs[i] for i ∈ 1:L]\n",
@@ -118,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,8 +147,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To test the plane-symmetric case we use the following vector: "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_test = Vector{Any}(undef,8)\n",
+    "v_test[1] = [2, 1, 0, 0, 3, 4, 0, 0, 5, 0, 0, 0, 0, 0]\n",
+    "v_test[2] = [4, 2, 0, 0, 3, 4, 0, 0, 5, 0, 0, 0, 0, 0] # para probar μ\n",
+    "v_test[3] = [2, 1, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0] # ν\n",
+    "v_test[4] = [2, 1, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0] # r\n",
+    "v_test[5] = [2, 1, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0] # τ\n",
+    "v_test[6] = [2, 1, 0, 0, 3, 4, 0, 0, 0, 0, 0, 0, 0, 0] # ν, r\n",
+    "v_test[7] = [2, 1, 0, 0, 3, 0, 0, 0, 5, 0, 0, 0, 0, 0] # ν, τ\n",
+    "v_test[8] = [2, 1, 0, 0, 0, 4, 0, 0, 5, 0, 0, 0, 0, 0] # r, τ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "F_test = Vector{Any}(undef,8)\n",
+    "p_test = ([-1.0;1.0;2.0])\n",
+    "\n",
+    "for i in 1:8\n",
+    "   F_test[i] = ΦaA_f(v_test[i],p_test)\n",
+    "end\n",
+    "\n",
+    "@show F_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1848,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.0",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
    "name": "julia-1.7"
   },
@@ -1823,7 +1856,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.0"
+   "version": "1.7.2"
   },
   "orig_nbformat": 4
  },
