--- a/Symbolics/symb_2d.ipynb
+++ b/Symbolics/symb_2d.ipynb
@@ -10,10 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "b0d852a1-2f1f-4216-b528-0c674e9c29b6",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nthreads = 10\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -30,12 +37,18 @@
     "using Latexify\n",
     "using Plots\n",
     "import Pkg; Pkg.add(\"BenchmarkTools\")\n",
-    "using BenchmarkTools"
+    "using BenchmarkTools\n",
+    "using FileIO\n",
+    "using JLD2\n",
+    "using Base.Threads\n",
+    "#Pkg; Pkg.add(\"DistributedArrays\")\n",
+    "println(\"nthreads = $(nthreads())\")\n",
+    "using Printf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "f413f740-ee80-48ca-b609-d8537bb2e38e",
    "metadata": {},
    "outputs": [
@@ -55,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "6ba5f855",
    "metadata": {},
    "outputs": [
@@ -90,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "698114b9",
    "metadata": {},
    "outputs": [
@@ -98,13 +111,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.533 μs (40 allocations: 1.95 KiB)\n"
+      "  9.320 μs (200 allocations: 7.00 KiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "15.681495676050915"
+       "513.6025404447003"
       ]
      },
      "metadata": {},
@@ -125,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "302423b0",
    "metadata": {},
    "outputs": [],
@@ -138,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "05c0fd76",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#53 (generic function with 1 method)"
+       "#16 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -159,7 +172,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
+   "id": "d31b3940",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Float64}:\n",
+       " 4.0\n",
+       " 2.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v_test = [zeros(L) for _ in 1:5]\n",
+    "v_test[1] = [2, 1, 0, 0, 0]\n",
+    "v_test[2] = [4, 2, 0, 0, 0] # para probar μ\n",
+    "v_test[3] = [2, 1, 1, 0, 0] # ν\n",
+    "v_test[4] = [2, 1, 0, 1, 0] # r\n",
+    "v_test[5] = [2, 1, 1, 1, 0] # τ\n",
+    "v_test[2]\n",
+    "#ζ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3dccdd90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×5 Matrix{Float64}:\n",
+       " 0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "F_test = [zeros(D,L) for _ in 1:5]\n",
+    "p_test = [-1.0;1.0;2.0]\n",
+    "F_test[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b99784b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×5 Matrix{Float64}:\n",
+       "  1.11111   -0.888889  -0.518519   0.481481  -0.518519\n",
+       " -0.888889   1.11111    0.481481  -0.518519   0.481481"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ΦaA_f(v_test[1],p_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ef674fdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F_test = [[1.1111111111111107 -0.8888888888888893 -0.5185185185185185 0.48148148148148145 -0.5185185185185185; -0.8888888888888893 1.1111111111111112 0.48148148148148145 -0.5185185185185185 0.48148148148148145], [0.2777777777777777 -0.22222222222222232 -0.06481481481481481 0.06018518518518518 -0.06481481481481481; -0.22222222222222232 0.2777777777777778 0.06018518518518518 -0.06481481481481481 0.06018518518518518], [46.13991769547302 -42.304526748971064 -14.938271604938272 14.506172839506172 -14.938271604938272; -42.3045267489712 41.176954732510296 14.209876543209882 -14.345679012345684 14.209876543209882], [118.31275720164604 -117.6872427983538 23.382716049382726 -23.617283950617278 23.382716049382726; -117.68724279835413 118.31275720164624 -23.617283950617285 23.382716049382722 -23.617283950617285], [25.33333333333333 -23.333333333333332 8.962962962962973 -9.592592592592586 8.962962962962973; -23.333333333333243 25.111111111111047 -9.88888888888889 9.555555555555571 -9.88888888888889]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Matrix{Float64}}:\n",
+       " [1.1111111111111107 -0.8888888888888893 … 0.48148148148148145 -0.5185185185185185; -0.8888888888888893 1.1111111111111112 … -0.5185185185185185 0.48148148148148145]\n",
+       " [0.2777777777777777 -0.22222222222222232 … 0.06018518518518518 -0.06481481481481481; -0.22222222222222232 0.2777777777777778 … -0.06481481481481481 0.06018518518518518]\n",
+       " [46.13991769547302 -42.304526748971064 … 14.506172839506172 -14.938271604938272; -42.3045267489712 41.176954732510296 … -14.345679012345684 14.209876543209882]\n",
+       " [118.31275720164604 -117.6872427983538 … -23.617283950617278 23.382716049382726; -117.68724279835413 118.31275720164624 … 23.382716049382722 -23.617283950617285]\n",
+       " [25.33333333333333 -23.333333333333332 … -9.592592592592586 8.962962962962973; -23.333333333333243 25.111111111111047 … 9.555555555555571 -9.88888888888889]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for i in 1:5\n",
+    "    F_test[i] = ΦaA_f(v_test[i],p_test)\n",
+    " end\n",
+    " \n",
+    " @show F_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e31ae72a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = Dict(\"pars\" => p_test, \"v_test\" => v_test, \"F_test\" => F_test)\n",
+    "file_name = \"D2_test\" * \".jld2\"\n",
+    "#rm(file_name)\n",
+    "\n",
+    "\n",
+    "save(file_name, test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c5226a42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Any} with 3 entries:\n",
+       "  \"F_test\" => [[1.11111 -0.888889 … 0.481481 -0.518519; -0.888889 1.11111 … -0.…\n",
+       "  \"v_test\" => [[2.0, 1.0, 0.0, 0.0, 0.0], [4.0, 2.0, 0.0, 0.0, 0.0], [2.0, 1.0,…\n",
+       "  \"pars\"   => [-1.0, 1.0, 2.0]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data = load(file_name)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "5b308edb",
    "metadata": {},
    "outputs": [
@@ -167,15 +333,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  766.875 ns (13 allocations: 480 bytes)\n"
+      "  3.856 μs (13 allocations: 480 bytes)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "2×5 Matrix{Float64}:\n",
-       "  98772.9  -98260.8  -10021.8   10021.7   -10021.8\n",
-       " -98260.8   97772.2    9954.97  -9972.49    9954.97"
+       "  1.18167e7  -1.18286e7   6.17201e5  -6.17186e5   6.17201e5\n",
+       " -1.18286e7   1.18425e7  -6.17754e5   6.17678e5  -6.17754e5"
       ]
      },
      "metadata": {},
@@ -1030,7 +1196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.0",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
    "name": "julia-1.7"
   },
@@ -1038,7 +1204,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.0"
+   "version": "1.7.2"
   }
  },
  "nbformat": 4,
