--- a/Symbolics/symb_4d.ipynb
+++ b/Symbolics/symb_4d.ipynb
@@ -11,13 +11,27 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nthreads = 10\n"
+     ]
+    }
+   ],
    "source": [
     "using Symbolics\n",
     "using LinearAlgebra\n",
     "using Latexify\n",
     "using Plots\n",
-    "using BenchmarkTools"
+    "using BenchmarkTools\n",
+    "using FileIO\n",
+    "using JLD2\n",
+    "using Base.Threads\n",
+    "#Pkg; Pkg.add(\"DistributedArrays\")\n",
+    "println(\"nthreads = $(nthreads())\")\n",
+    "using Printf"
    ]
   },
   {
@@ -31,9 +45,8 @@
        "χaAB (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -61,9 +74,8 @@
        " 1.0"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -83,12 +95,11 @@
     {
      "data": {
       "text/plain": [
-       "27.71010940819427"
+       "-19.604679226277813"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -149,17 +160,46 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "To test the plane-symmetric case we use the following vector: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14-element Vector{Int64}:\n",
+       " 2\n",
+       " 1\n",
+       " 0\n",
+       " 0\n",
+       " 0\n",
+       " 4\n",
+       " 0\n",
+       " 0\n",
+       " 5\n",
+       " 0\n",
+       " 0\n",
+       " 0\n",
+       " 0\n",
+       " 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "v_test = Vector{Any}(undef,8)\n",
+    "v_test = [zeros(L) for _ in 1:8]\n",
     "v_test[1] = [2, 1, 0, 0, 3, 4, 0, 0, 5, 0, 0, 0, 0, 0]\n",
     "v_test[2] = [4, 2, 0, 0, 3, 4, 0, 0, 5, 0, 0, 0, 0, 0] # para probar μ\n",
     "v_test[3] = [2, 1, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0] # ν\n",
@@ -172,18 +212,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: D not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: D not defined\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] (::var\"#9#10\")(#unused#::Int64)\n",
+      "   @ Main ./none:0\n",
+      " [2] iterate\n",
+      "   @ ./generator.jl:47 [inlined]\n",
+      " [3] collect(itr::Base.Generator{UnitRange{Int64}, var\"#9#10\"})\n",
+      "   @ Base ./array.jl:724\n",
+      " [4] top-level scope\n",
+      "   @ ~/Julia/Conformal-Fluids-Julia/Symbolics/symb_4d.ipynb:1"
+     ]
+    }
+   ],
+   "source": [
+    "F_test = [zeros(D,L) for _ in 1:8]\n",
+    "\n",
+    "p_test = ([-1.0;1.0;2.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "F_test = Vector{Any}(undef,8)\n",
-    "p_test = ([-1.0;1.0;2.0])\n",
     "\n",
     "for i in 1:8\n",
     "   F_test[i] = ΦaA_f(v_test[i],p_test)\n",
     "end\n",
     "\n",
     "@show F_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = Dict(\"pars\" => p_test, \"v_test\" => v_test, \"F_test\" => F_test)\n",
+    "file_name = \"D4_test\" * \".jld2\"\n",
+    "#rm(file_name)\n",
+    "\n",
+    "\n",
+    "save(file_name, test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Any} with 3 entries:\n",
+       "  \"F_test\" => Any[#undef, #undef, #undef, #undef, #undef, #undef, #undef, #unde…\n",
+       "  \"v_test\" => Any[[2, 1, 0, 0, 3, 4, 0, 0, 5, 0, 0, 0, 0, 0], [4, 2, 0, 0, 3, 4…\n",
+       "  \"pars\"   => [-1.0, 1.0, 2.0]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data = load(file_name)\n",
+    "data"
    ]
   },
   {
